--- a/index.html
+++ b/index.html
@@ -4,13 +4,63 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
 
   <body>
     <h1>CUCINA DI CATHERINA</h1>
-    <p>fgfgffg</p>     <p>123</p>     <p>123</p>
-    <p>123</p>
-    <p>123</p>
+    <!--video 1-->
+    <div class="container">
+      <div class="slide-container">
+        <div class="slide">
+          <div class="content">
+            <h3>video slider 01</h3>
+            <p>vitannja</p>
+            <a href="#" class="btn">learn more</a>
+          </div>
+          <video src="./video/play1.mp4" muted autoplay loop></video>
+        </div>
+      </div>
+    </div>
+    <!--video 2-->
+    <div class="container">
+      <div class="slide-container">
+        <div class="slide">
+          <div class="content">
+            <h3>video slider 02</h3>
+            <p>vitannja</p>
+            <a href="#" class="btn">learn more</a>
+          </div>
+          <video src="./video/play2.mp4" muted autoplay loop></video>
+        </div>
+      </div>
+    </div>
+    <!--video 3-->
+    <div class="container">
+      <div class="slide-container">
+        <div class="slide">
+          <div class="content">
+            <h3>video slider 03</h3>
+            <p>vitannja</p>
+            <a href="#" class="btn">learn more</a>
+          </div>
+          <video src="./video/play3.mp4" muted autoplay loop></video>
+        </div>
+      </div>
+    </div>
+    <!--video 4-->
+    <div class="container">
+      <div class="slide-container">
+        <div class="slide">
+          <div class="content">
+            <h3>video slider 04</h3>
+            <p>vitannja</p>
+            <a href="#" class="btn">learn more</a>
+          </div>
+          <video src="./video/play4.mp4" muted autoplay loop></video>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
