--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <h1>CUCINA DI CATHERINA</h1>
     <!--video 1-->
     <div class="container">
-      <div class="slide-container">
+      <div class="slide-container active">
         <div class="slide">
           <div class="content">
             <h3>video slider 01</h3>
             <p>vitannja</p>
             <a href="#" class="btn">learn more</a>
           </div>
-          <video src="./video/play1.mp4" muted autoplay loop></video>
+          <video src="./video/play2.mp4" muted autoplay loop></video>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
             <p>vitannja</p>
             <a href="#" class="btn">learn more</a>
           </div>
-          <video src="./video/play2.mp4" muted autoplay loop></video>
+          <video src="./video/play4.mp4" muted autoplay loop></video>
         </div>
       </div>
     </div>
@@ -45,7 +45,7 @@
             <p>vitannja</p>
             <a href="#" class="btn">learn more</a>
           </div>
-          <video src="./video/play3.mp4" muted autoplay loop></video>
+          <video src="./video/play2.mp4" muted autoplay loop></video>
         </div>
       </div>
     </div>
@@ -61,6 +61,26 @@
           <video src="./video/play4.mp4" muted autoplay loop></video>
         </div>
       </div>
+
+      <div id="next" onclick="next()">></div>
+      <div id="prev" onclick="prev()"><</div>
     </div>
+
+    <script>
+      let slides = document.querySelectorAll(".slide-container");
+      let index = 0;
+
+      function next() {
+        slides[index].classList.remove("active");
+        index = (index + 1) % slides.length;
+        slides[index].classList.add("active");
+      }
+
+      function prev() {
+        slides[index].classList.remove("active");
+        index = (index - 1 + slides.length) % slides.length;
+        slides[index].classList.add("active");
+      }
+    </script>
   </body>
 </html>
